force-app/main/default/objects/Krow__Expense_Type__c/fields/Krow__Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Krow__Account_Code__c</fullName>
    <label>Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>