force-app/main/default/objects/Krow__Expense_Type__c/fields/Krow__Billable_Default__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billable_Default__c</fullName>
    <label>Billable Default</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Billable</fullName>
            </value>
            <value>
                <fullName>Billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>