force-app/main/default/objects/Krow__Expense_Type__c/fields/Krow__Category__c.field-meta.xml
<CustomField>
    <fullName>Krow__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mileage/Fuel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>