force-app/main/default/objects/Krow__Expense_Type__c/fields/Krow__Default_Product__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Expense Types</relationshipLabel>
    <relationshipName>Expense_Types</relationshipName>
    <type>Lookup</type>
</CustomField>