force-app/main/default/objects/Krow__Expense_Type__c/fields/Krow__Default_to_Reimbursable__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_to_Reimbursable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, when the Expense Type is selected, the Reimbursable field on the Expense Line will be checked</description>
    <label>Default to Reimbursable</label>
    <type>Checkbox</type>
</CustomField>