force-app/main/default/objects/Krow__Expense_Type__c/fields/Krow__Display_Merchant__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Merchant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Merchant</label>
    <type>Checkbox</type>
</CustomField>