force-app/main/default/objects/Krow__Expense_Type__c/fields/Krow__Include_Tax__c.field-meta.xml
<CustomField>
    <fullName>Krow__Include_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, it will add &quot;Tax Amount&quot; to the Expense Line for Tax.</description>
    <label>Include Tax</label>
    <type>Checkbox</type>
</CustomField>