force-app/main/default/objects/Krow__Expense_Type__c/fields/Krow__Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Max_Amount__c</fullName>
    <label>Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>