force-app/main/default/objects/Krow__Expense_Type__c/fields/Krow__Receipt_Required__c.field-meta.xml
<CustomField>
    <fullName>Krow__Receipt_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>check receipt is required or not to add or update the expense item</description>
    <label>Receipt Required</label>
    <type>Checkbox</type>
</CustomField>