force-app/main/default/objects/Krow__Expense_Type__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Active__c</columns>
    <columns>Krow__Billable_Default__c</columns>
    <columns>Krow__Account_Code__c</columns>
    <columns>Krow__Default_to_Reimbursable__c</columns>
    <columns>Krow__Display_Merchant__c</columns>
    <columns>Krow__Include_Tax__c</columns>
    <columns>Krow__Max_Amount__c</columns>
    <columns>Krow__Default_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>